commented front end code

--- a/Front_End/public/mainStyleSheet.css
+++ b/Front_End/public/mainStyleSheet.css
@@ -1,13 +1,6 @@
-/* 
-title hex code: #DEB31A
-
-title font: league gothic
-
-subtext font: carlito
-
-subtext hexcode: #737373 
-
-buttons & input field color: #667d9d
+/*
+mainStyleSheet.css
+Authors: Cameron Fitzpatrick, Luc Nglankong
 */
 
 @font-face {
