more comments to front end readme and css files

--- a/Front_End/public/mainStyleSheet.css
+++ b/Front_End/public/mainStyleSheet.css
@@ -3,19 +3,24 @@ mainStyleSheet.css
 Authors: Cameron Fitzpatrick, Luc Nglankong
 */
 
+/* Font information and path */
 @font-face {
   font-family: 'carlito';
   src: url('/assets/fonts/carlito/Carlito-Regular.ttf');
 }
 
+/* Used to set the placeholder text font color and opacity in input field */
 ::placeholder{
   color: #E9CC66;
   opacity: 0.5;
 }
 
+/* Used for positioning purposes */
 main {
   min-height: 100vh
 }
+
+/* used for positioning purposes, sets the background image to path */
 div.pageContainer {
   display: flex;
   align-items: center;
@@ -26,6 +31,7 @@ div.pageContainer {
   background-size: 100% 100%;
 }
 
+/* used for positioning purposes */
 div.boxContent{
   display: flex;
   flex-direction: column;
@@ -33,6 +39,7 @@ div.boxContent{
   align-items: flex-end;
 }
 
+/* wrapper that holds #LandingPage and #description for positioning purposes */
 div.title{
   display: flex;
   flex-direction: column;
@@ -40,6 +47,7 @@ div.title{
   align-items: flex-end;
 }
 
+/* Title text of the page that holds "Moosic Classifier" */
 #LandingPage {
   font-size: 40px;
   weight: bold;
@@ -48,12 +56,14 @@ div.title{
   font-family: 'league-gothic', sans-serif;
 }
 
+/* description text of the webpage, "music genre classifier" */
 #description{
   color: #737373;
   font-family: 'carlito', sans-serif;
   font-size: 3em;
 }
 
+/* wrapper that holds input field and buttons for positioning purposes */
 #textInput {
   display: flex;
   flex-direction: column;
@@ -63,6 +73,7 @@ div.title{
   font-family: 'carlito', sans-serif;
 }
 
+/* Input field that accepts song titles */
 #songInput {
   font-size: 5px;
   color: #E9CC66;
@@ -71,12 +82,14 @@ div.title{
   background-color: #667d9d ;
 }
 
+/* wrapper that holds buttons for positioning purposes */
 div.buttons{
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
 }
 
+/* styles both the Search and Feeling Lucky buttons */
 #buttonStyle {
   font-size: 25px;
   color: white;
